# rrps

./: CMakeLists.txt  README.md  TODO  basic_types.hpp  i_provide_service_registration.hpp  i_request_service_registration.hpp  i_service_provider.hpp  i_service_requester.hpp  main.cpp  rrps.hpp  test.hpp
mtcs/: CMakeLists.txt
mtcs/include/: component.hpp  component_manager.hpp
prs/: CMakeLists.txt
prs/include/: basic_types.hpp  i_provide_service_registrator.hpp  i_request_service_registrator.hpp  provider_recipient_service.hpp
rrps/: CMakeLists.txt
rrps/include/: basic_types.hpp  i_provide_service_registration.hpp  i_provide_service_registrator.hpp  i_provider_requester_service.hpp  i_request_service_registration.hpp  i_request_service_registrator.hpp  rrps.hpp
test/: tester.cpp
